--- a/config/localElement.ini
+++ b/config/localElement.ini
@@ -7,7 +7,7 @@ aclogin=xpath>//*[@text='登录']
 username=id>cn.com.open.mooc:id/accountEdit
 passwd=id>cn.com.open.mooc:id/passwordEdit
 login_btn=id>cn.com.open.mooc:id/loginLabel
-
+forget_password=xpath>//*[@text='忘记密码']
 
 
 
